added critical apis and fix panics
