# gen/http/openapi.yaml
@@ -15,7 +15,36 @@ produces:
     - application/xml
     - application/gob
 paths:
-    /v1/document/{id}:
+    /v1/documents:
+        post:
+            tags:
+                - documents
+            summary: createDocument documents
+            operationId: documents#createDocument
+            parameters:
+                - name: CreateDocumentRequestBody
+                  in: body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/DocumentsCreateDocumentRequestBody'
+                    required:
+                        - title
+                        - workspace_id
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/Document'
+                        required:
+                            - id
+                            - title
+                            - version
+                            - content
+                            - workspace_id
+                            - created_at
+            schemes:
+                - http
+    /v1/documents/{id}:
         get:
             tags:
                 - documents
@@ -32,9 +61,16 @@ paths:
                     description: OK response.
                     schema:
                         $ref: '#/definitions/Document'
+                        required:
+                            - id
+                            - title
+                            - version
+                            - content
+                            - workspace_id
+                            - created_at
             schemes:
                 - http
-    /v1/workspace/create:
+    /v1/workspaces:
         post:
             tags:
                 - workspaces
@@ -61,6 +97,49 @@ paths:
                             - created_at
             schemes:
                 - http
+    /v1/workspaces/{id}:
+        get:
+            tags:
+                - workspaces
+            summary: getWorkspace workspaces
+            operationId: workspaces#getWorkspace
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  type: string
+                  format: uuid
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/Workspace'
+                        required:
+                            - id
+                            - name
+                            - owner_id
+                            - created_at
+            schemes:
+                - http
+    /v1/workspaces/{id}/documents:
+        get:
+            tags:
+                - workspaces
+            summary: getAllWorkspaceDocuments workspaces
+            operationId: workspaces#getAllWorkspaceDocuments
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  type: string
+                  format: uuid
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/WorkspacesGetAllWorkspaceDocumentsResponseBody'
+            schemes:
+                - http
 definitions:
     Document:
         title: Document
@@ -68,29 +147,58 @@ definitions:
         properties:
             content:
                 type: string
-                example: Tempora voluptatem qui eius ipsam.
+                example: Quia commodi.
             created_at:
                 type: string
-                example: "1970-05-13T09:37:10Z"
+                example: "2009-05-22T20:22:24Z"
                 format: date-time
             id:
                 type: string
-                example: d00088da-f935-4c13-a4ae-1d37c5d95e09
+                example: f03de107-ca95-4f36-9f62-9679f6271d84
                 format: uuid
             title:
                 type: string
-                example: Qui nobis sunt.
+                example: Est nihil et quasi molestias.
             version:
                 type: integer
-                example: 776250283615509095
+                example: 5981053160314408447
                 format: int64
+            workspace_id:
+                type: string
+                example: 60d14f46-51e6-4b7d-9bbc-a1f53ed7bc6e
+                format: uuid
         description: Knowledge sharing medium in this platform is a document.
         example:
-            content: Tempora voluptatem qui eius ipsam.
-            created_at: "1970-05-13T09:37:10Z"
-            id: d00088da-f935-4c13-a4ae-1d37c5d95e09
-            title: Qui nobis sunt.
-            version: 776250283615509095
+            content: Quia commodi.
+            created_at: "2009-05-22T20:22:24Z"
+            id: f03de107-ca95-4f36-9f62-9679f6271d84
+            title: Est nihil et quasi molestias.
+            version: 5981053160314408447
+            workspace_id: 60d14f46-51e6-4b7d-9bbc-a1f53ed7bc6e
+        required:
+            - id
+            - title
+            - version
+            - content
+            - workspace_id
+            - created_at
+    DocumentsCreateDocumentRequestBody:
+        title: DocumentsCreateDocumentRequestBody
+        type: object
+        properties:
+            title:
+                type: string
+                example: Voluptate et nihil quaerat sit error.
+            workspace_id:
+                type: string
+                example: 0d5ff728-d37a-412b-8864-6ec621221ec2
+                format: uuid
+        example:
+            title: Voluptate et nihil quaerat sit error.
+            workspace_id: 0d5ff728-d37a-412b-8864-6ec621221ec2
+        required:
+            - title
+            - workspace_id
     Workspace:
         title: Workspace
         type: object
@@ -138,3 +246,50 @@ definitions:
         required:
             - name
             - owner_id
+    WorkspacesGetAllWorkspaceDocumentsResponseBody:
+        title: WorkspacesGetAllWorkspaceDocumentsResponseBody
+        type: object
+        properties:
+            documents:
+                type: array
+                items:
+                    $ref: '#/definitions/Document'
+                example:
+                    - content: Quia commodi.
+                      created_at: "2009-05-22T20:22:24Z"
+                      id: f03de107-ca95-4f36-9f62-9679f6271d84
+                      title: Est nihil et quasi molestias.
+                      version: 5981053160314408447
+                      workspace_id: 60d14f46-51e6-4b7d-9bbc-a1f53ed7bc6e
+                    - content: Quia commodi.
+                      created_at: "2009-05-22T20:22:24Z"
+                      id: f03de107-ca95-4f36-9f62-9679f6271d84
+                      title: Est nihil et quasi molestias.
+                      version: 5981053160314408447
+                      workspace_id: 60d14f46-51e6-4b7d-9bbc-a1f53ed7bc6e
+                    - content: Quia commodi.
+                      created_at: "2009-05-22T20:22:24Z"
+                      id: f03de107-ca95-4f36-9f62-9679f6271d84
+                      title: Est nihil et quasi molestias.
+                      version: 5981053160314408447
+                      workspace_id: 60d14f46-51e6-4b7d-9bbc-a1f53ed7bc6e
+        example:
+            documents:
+                - content: Quia commodi.
+                  created_at: "2009-05-22T20:22:24Z"
+                  id: f03de107-ca95-4f36-9f62-9679f6271d84
+                  title: Est nihil et quasi molestias.
+                  version: 5981053160314408447
+                  workspace_id: 60d14f46-51e6-4b7d-9bbc-a1f53ed7bc6e
+                - content: Quia commodi.
+                  created_at: "2009-05-22T20:22:24Z"
+                  id: f03de107-ca95-4f36-9f62-9679f6271d84
+                  title: Est nihil et quasi molestias.
+                  version: 5981053160314408447
+                  workspace_id: 60d14f46-51e6-4b7d-9bbc-a1f53ed7bc6e
+                - content: Quia commodi.
+                  created_at: "2009-05-22T20:22:24Z"
+                  id: f03de107-ca95-4f36-9f62-9679f6271d84
+                  title: Est nihil et quasi molestias.
+                  version: 5981053160314408447
+                  workspace_id: 60d14f46-51e6-4b7d-9bbc-a1f53ed7bc6e
