# internal/infrastructure/postgres/models/workspace.go
@@ -7,7 +7,7 @@ import (
 	"github.com/google/uuid"
 )
 
-type WorkspaceModel struct {
+type Workspace struct {
 	ID        uuid.UUID `gorm:"type:uuid;default:gen_random_uuid();primaryKey"`
 	Name      string
 	OwnerID   uuid.UUID `gorm:"type:uuid"`
